--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gqlint",
   "version": "1.1.0",
   "description": "GraphQL Linter",
+  "keywords": ["graphql", "gql", "lint", "linter"],
   "repository": {
     "type" : "git",
     "url" : "https://github.com/happylinks/gqlint.git"
