--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
   },
   "main": "./lib/gqlint.js",
   "scripts": {
-     "test": "jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "test": "jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
   },
   "bin": {
     "gqlint": "./bin/gqlint.js"
@@ -26,6 +33,7 @@
     "commander": "^2.9.0",
     "graphql": "^0.10.1",
     "lodash": "^4.17.4",
+    "node-fetch": "^1.7.1",
     "pad-component": "0.0.1",
     "pluralize": "^5.0.0",
     "text-table": "^0.2.0",
@@ -33,7 +41,9 @@
   },
   "devDependencies": {
     "coveralls": "^2.13.1",
-    "jest": "^20.0.4"
+    "husky": "^0.13.4",
+    "jest": "^20.0.4",
+    "lint-staged": "^3.6.0"
   },
   "jest": {
     "verbose": true
