--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gqlint",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "GraphQL Linter",
   "keywords": [
     "graphql",
@@ -29,6 +29,7 @@
   "author": "Michiel Westerbeek <happylinks@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-code-frame": "^6.22.0",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "graphql": "^0.10.1",
