--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gqlint",
-  "version": "1.3.3",
+  "version": "1.4.0",
   "description": "GraphQL Linter",
   "keywords": [
     "graphql",
@@ -37,6 +37,7 @@
     "node-fetch": "^1.7.1",
     "pad-component": "0.0.1",
     "pluralize": "^5.0.0",
+    "prettier": "^1.5.3",
     "text-table": "^0.2.0",
     "wordwrap": "^1.0.0"
   },
