--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gqlint",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "GraphQL Linter",
   "keywords": [
     "graphql",
@@ -15,6 +15,7 @@
   "main": "./lib/gqlint.js",
   "scripts": {
     "test": "jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "test-local": "jest",
     "precommit": "lint-staged"
   },
   "lint-staged": {
