--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
   "name": "gqlint",
-  "version": "1.6.1",
+  "version": "1.7.0",
   "description": "GraphQL Linter",
-  "keywords": [
-    "graphql",
-    "gql",
-    "lint",
-    "linter"
-  ],
+  "keywords": ["graphql", "gql", "lint", "linter"],
   "repository": {
     "type": "git",
     "url": "https://github.com/happylinks/gqlint.git"
@@ -19,10 +14,7 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "*.js": [
-      "prettier --single-quote --write",
-      "git add"
-    ]
+    "*.js": ["prettier --single-quote --write", "git add"]
   },
   "bin": {
     "gqlint": "./bin/gqlint.js"
