--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "gqlint",
   "version": "1.8.0",
   "description": "GraphQL Linter",
-  "keywords": ["graphql", "gql", "lint", "linter"],
+  "keywords": [
+    "graphql",
+    "gql",
+    "lint",
+    "linter"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/happylinks/gqlint.git"
@@ -14,7 +19,10 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "*.js": ["prettier --single-quote --write", "git add"]
+    "*.js": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
   },
   "bin": {
     "gqlint": "./bin/gqlint.js"
